[oss-fuzz 42520960] Integer-overflow in DemuxInit (from asf.c)

Ref: https://issues.oss-fuzz.com/issues/42520960

xeon ~/work/git/vlc/build-ubsan $  ./test/vlc-demux-dec-run /home/tom/Downloads/clusterfuzz-*

../../modules/demux/asf/asf.c:1270:79: runtime error: signed integer overflow: 720575940379279359 * 13 cannot be represented in type 'long int'

Sample: clusterfuzz-testcase-minimized-vlc-demux-dec-libfuzzer-6186808512217088