demux: asf: check the duration doesn't overflow

Fixes #29003