modules/demux/asf/asf.c
@@ -40,6 +40,7 @@
 #include <vlc_vout.h>
 
 #include <limits.h>
+#include <stdckdint.h>
 
 #include "asfpacket.h"
 #include "libasf.h"
@@ -1256,8 +1257,9 @@ static int DemuxInit( demux_t *p_demux )
                   p_sys->p_fp->i_min_data_packet_size;
 
         /* calculate the time duration in micro-s */
-        p_sys->i_length = VLC_TICK_FROM_MSFTIME(p_sys->p_fp->i_play_duration) *
-                   (vlc_tick_t)i_count /
+        if ( ckd_mul(&p_sys->i_length, VLC_TICK_FROM_MSFTIME(p_sys->p_fp->i_play_duration), i_count) )
+            p_sys->i_length = 0;
+        p_sys->i_length = p_sys->i_length /
                    (vlc_tick_t)p_sys->p_fp->i_data_packets_count;
         if( p_sys->i_length <= p_sys->p_fp->i_preroll )
             p_sys->i_length = 0;
